# FireDetectionCamera

./: CMakeLists.txt  README.md  generalSettings.json  google-services.json  install.sh
FireDetectionApp/: CMakeLists.txt  fireDetection.cpp
include/: Coordinates.h  FirebaseManager.h
include/simulator/: simulator.h
src/: Coordinates.cpp  FirebaseManager.cpp
src/simulator/: simulator.cpp
